# slambook2_learning

./: .gitignore  CMakeLists.txt  README.md
ch03/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch03/useGeometry/: eigenGeometry.cpp
ch04/example/: CMakeLists.txt
ch05/imageBasics/: CMakeLists.txt  undistortImage.cpp
ch05/rgbd/: joinMap.cpp
ch06/: CMakeLists.txt
ch06/src/: ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
ch07/: CMakeLists.txt
ch07/src/: orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  triangulation.cpp
ch08/: CMakeLists.txt
ch08/src/: direct_method.cpp  optical_flow.cpp
ch3/examples/: coordinateTransform.cpp
ch3/useGeometry/: CMakeLists.txt
ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/rgbd/: CMakeLists.txt
ch5/stereo/: CMakeLists.txt
chapter_demo/ch02/: CMakeLists.txt
chapter_demo/ch03/: CMakeLists.txt
chapter_demo/ch03/examples/: CMakeLists.txt  plotTrajectory.cpp
chapter_demo/ch03/useEigen/: CMakeLists.txt
chapter_demo/ch03/useGeometry/: CMakeLists.txt
chapter_demo/ch03/visualizeGeometry/: CMakeLists.txt
chapter_demo/ch04/: CMakeLists.txt  useSophus.cpp
chapter_demo/ch04/example/: CMakeLists.txt  trajectoryError.cpp
chapter_demo/ch05/: CMakeLists.txt
chapter_demo/ch05/imageBasics/: imageBasics.cpp  undistortImage.cpp
chapter_demo/ch05/rgbd/: joinMap.cpp
chapter_demo/ch05/stereo/: stereoVision.cpp
chapter_demo/ch06/: CMakeLists.txt
chapter_demo/ch06/src/: ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
chapter_demo/ch07/: CMakeLists.txt
chapter_demo/ch07/src/: orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
chapter_demo/ch08/: CMakeLists.txt
chapter_demo/ch08/src/: direct_method.cpp  optical_flow.cpp
doc/note/: VSLAM_ch01_intro.md  VSLAM_ch02_SLAM_intro.md  VSLAM_ch05_camera.md  VSLAM_ch06_non_linear_optimization.md  VSLAM_ch07_visual_odometry_1.md  VSLAM_ch08_visual_odometry_2.md
doc/reference/求解AX=B/: [数值计算] LU分解、LUP分解、Cholesky分解 - 知乎.mhtml  也来谈AX=B的矩阵分解求解方法 - 知乎.mhtml  矩阵的LUP分解 - 知乎.mhtml  矩阵的LU分解 - 知乎.mhtml  线性方程组Ax=b的可解性 - 知乎.mhtml  高斯分解，LU分解，Cholesky分解，QR分解 - 知乎.mhtml
note/: VSLAM_ch02_SLAM_intro.md  VSLAM_ch03_3d_transformation.md  VSLAM_ch04_Lie_algebra.md  VSLAM_ch05_camera.md  VSLAM_ch06_non_linear_optimization.md  VSLAM_ch07_visual_odometry_1.md
note/backup/: VSLAM_note.md
readme/: VSLAM14Chapter_note.md
